# prepyrus

./: .prettierignore  Cargo.toml  README.md  TEST_README.md  cspell.json  prepyrus_settings.json
.github/workflows/: ci.yaml
src/: cli.rs  errors.rs  inserter.rs  inserters.rs  lib.rs  main.rs  transformers.rs  utils.rs  validator.rs  validators.rs
tests/: integration_test_verify.rs
tests/mocks/: test.bib
tests/mocks/data/: development.mdx  development_to_process.mdx  first-paragraph.mdx  gen_index.mdx  science-of-logic-introduction.mdx
tests/mocks/data-isolated/: first-paragraph.mdx
